--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -25,8 +25,8 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
-	runtimeOnly 'com.h2database:h2:1.4.200'
+	implementation 'mysql:mysql-connector-java:8.0.11'
+//	runtimeOnly 'com.h2database:h2:1.4.200'
 }
 
 tasks.named('test') {
