--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,17 +1,37 @@
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+server.address=localhost
+server.port=8080
 
-spring.datasource.url=jdbc:h2:~/todo
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# h2 ??
+
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#
+#spring.datasource.url=jdbc:h2:~/todo
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+
+# mysql ??
+spring.datasource.url=jdbc:mysql://localhost:3306/TODO_DB?useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+spring.datasource.username=test_user
+spring.datasource.password=glory
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.database=mysql
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# jpa init ??
 
 spring.sql.init.mode=always
 spring.sql.init.encoding=UTF-8
 spring.sql.init.data-locations=classpath:data.sql
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.defer-datasource-initialization=true
+
+# logging ??
+logging.level.org.hibernate=info
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
