--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.address=localhost
 server.port=8080
 
-# h2 ??
+# h2 설정
 
 #spring.h2.console.enabled=true
 #spring.h2.console.path=/h2-console
@@ -11,7 +11,7 @@ server.port=8080
 #spring.datasource.username=sa
 #spring.datasource.password=
 
-# mysql ??
+# mysql 설정
 spring.datasource.url=jdbc:mysql://localhost:3306/TODO_DB?useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
 spring.datasource.username=test_user
 spring.datasource.password=glory
@@ -20,7 +20,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
-# jpa init ??
+# jpa init 설정
 
 spring.sql.init.mode=always
 spring.sql.init.encoding=UTF-8
@@ -29,7 +29,7 @@ spring.sql.init.data-locations=classpath:data.sql
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.defer-datasource-initialization=true
 
-# logging ??
+# logging 설정
 logging.level.org.hibernate=info
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.show_sql=true
