--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.address=localhost
+server.address=0.0.0.0
 server.port=8080
 
 # h2 설정
@@ -12,9 +12,9 @@ server.port=8080
 #spring.datasource.password=
 
 # mysql 설정
-spring.datasource.url=jdbc:mysql://localhost:3306/TODO_DB?useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://database:3306/TODO_DB?useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
 spring.datasource.username=test_user
-spring.datasource.password=glory
+spring.datasource.password=userpwd
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.database=mysql
